tests/baselines/reference/isolatedDeclarationErrorsDefault.errors.txt
tests/cases/compiler/a.ts(1,16): error TS9037: Default exports can't be inferred with --isolatedDeclarations.
tests/cases/compiler/b.ts(1,23): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
tests/cases/compiler/c.ts(1,16): error TS9017: Only const arrays can be inferred with --isolatedDeclarations.
tests/cases/compiler/d.ts(1,24): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
tests/cases/compiler/e.ts(1,24): error TS9013: Expression type can't be inferred with --isolatedDeclarations.


==== tests/cases/compiler/a.ts (1 errors) ====
    export default 1 + 1;
                   ~~~~~
!!! error TS9037: Default exports can't be inferred with --isolatedDeclarations.
!!! related TS9036 tests/cases/compiler/a.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
    
    
==== tests/cases/compiler/b.ts (1 errors) ====
    export default { foo: 1 + 1 };
                          ~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9036 tests/cases/compiler/b.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
!!! related TS9035 tests/cases/compiler/b.ts:1:23: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    
==== tests/cases/compiler/c.ts (1 errors) ====
    export default [{ foo: 1 + 1 }];
                   ~~~~~~~~~~~~~~~~
!!! error TS9017: Only const arrays can be inferred with --isolatedDeclarations.
!!! related TS9036 tests/cases/compiler/c.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
    
==== tests/cases/compiler/d.ts (1 errors) ====
    export default [{ foo: 1 + 1 }] as const;
                           ~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9036 tests/cases/compiler/d.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
!!! related TS9035 tests/cases/compiler/d.ts:1:24: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    
==== tests/cases/compiler/e.ts (1 errors) ====
    export default [{ foo: 1 + 1 }] as const;
                           ~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9036 tests/cases/compiler/e.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
!!! related TS9035 tests/cases/compiler/e.ts:1:24: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    
==== tests/cases/compiler/f.ts (0 errors) ====
    const a = { foo: 1 };
    export default a;